# FdF

./: Makefile  README.md
FdF/: CMakeLists.txt  Makefile
FdF/include/: FdF.h
FdF/src/: cords.c  draw.c  draw_3d.c  exit.c  init.c  main.c  read.c
FdF/test_maps/: basictest.fdf  pyra.fdf
include/: fdf.h
src/: cords.c  draw.c  draw_3d.c  exit.c  init.c  main.c  read.c  validate.c
test_maps/: julia.fdf  pylone.fdf  pyramide.fdf
